// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchesWithNoResults should render the TopSearches component with data 1`] = `
<div>
  <section
    class="searches-with-no-results svelte-9lcmy8"
  >
    <article
      class="svelte-pntwh0"
    >
       
      <section
        class="svelte-1kld2ef"
      >
        <div
          class="title svelte-1kld2ef"
        >
          <h2
            class="svelte-1kld2ef"
          >
            No results
          </h2>
           
          <div
            slot="help"
          >
            <div
              aria-expanded="false"
              class="svelte-usl6ua"
              data-testid="info-tip"
            >
              <div
                class=" svelte-zpbvvv"
                style="--icon-width: 24px; --icon-height: 24px;"
              >
                <object
                  src="ic-asset-info.svg/"
                />
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="actions svelte-1kld2ef"
        >
          <div
            slot="actions"
          >
            <button
              class="download-csv-button svelte-wktmji"
              data-testid="download-csv-button"
              title="Download CSV (max 1000)"
            >
               
              <div
                class=" svelte-zpbvvv"
                style="--icon-width: 24px; --icon-height: 24px;"
              >
                <object
                  src="ic-download.svg/"
                />
              </div>
            </button>
             
            <div
              class="select searches-with-no-results-sizes-select svelte-c7jdhd"
            >
              <span>
                Show
              </span>
               
              <div
                class="
    mdc-select
    smui-select
    
    
    smui-select--standard
    
    
  "
              >
                 
                <i
                  class="mdc-select__dropdown-icon"
                />
                 
                <input
                  id="SMUI-select-1"
                  type="hidden"
                  value="5"
                />
                 
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="SMUI-select-1-smui-label SMUI-select-1-smui-selected-text"
                  aria-required="false"
                  class="mdc-select__selected-text"
                  id="SMUI-select-1-smui-selected-text"
                  role="button"
                  tabindex="0"
                >
                  5
                </div>
                 
                 
                 
                <div
                  class="
    mdc-line-ripple
    
    
  "
                />
                
                 
              </div>
            </div>
          </div>
        </div>
      </section>
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="svelte-3fn7cm"
        >
          <div
            class="spinner-container svelte-bvd1nw"
          >
            <div
              class="spinner dot-0 svelte-bvd1nw"
            />
            <div
              class="spinner dot-1 svelte-bvd1nw"
            />
            <div
              class="spinner dot-2 svelte-bvd1nw"
            />
          </div>
        </div>
      </section>
    </article>
  </section>
</div>
`;

exports[`SearchesWithNoResults should render the TopSearches component with data 2`] = `
<div>
  <section
    class="searches-with-no-results svelte-9lcmy8"
  >
    <article
      class="svelte-pntwh0"
    >
       
      <section
        class="svelte-1kld2ef"
      >
        <div
          class="title svelte-1kld2ef"
        >
          <h2
            class="svelte-1kld2ef"
          >
            No results
          </h2>
           
          <div
            slot="help"
          >
            <div
              aria-expanded="false"
              class="svelte-usl6ua"
              data-testid="info-tip"
            >
              <div
                class=" svelte-zpbvvv"
                style="--icon-width: 24px; --icon-height: 24px;"
              >
                <object
                  src="ic-asset-info.svg/"
                />
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="actions svelte-1kld2ef"
        >
          <div
            slot="actions"
          >
            <button
              class="download-csv-button svelte-wktmji"
              data-testid="download-csv-button"
              title="Download CSV (max 1000)"
            >
               
              <div
                class=" svelte-zpbvvv"
                style="--icon-width: 24px; --icon-height: 24px;"
              >
                <object
                  src="ic-download.svg/"
                />
              </div>
            </button>
             
            <div
              class="select searches-with-no-results-sizes-select svelte-c7jdhd"
            >
              <span>
                Show
              </span>
               
              <div
                class="
    mdc-select
    smui-select
    
    
    smui-select--standard
    
    
  "
              >
                 
                <i
                  class="mdc-select__dropdown-icon"
                />
                 
                <input
                  id="SMUI-select-1"
                  type="hidden"
                  value="5"
                />
                 
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="SMUI-select-1-smui-label SMUI-select-1-smui-selected-text"
                  aria-required="false"
                  class="mdc-select__selected-text"
                  id="SMUI-select-1-smui-selected-text"
                  role="button"
                  tabindex="0"
                >
                  5
                </div>
                 
                 
                 
                <div
                  class="
    mdc-line-ripple
    
    
  "
                />
                
                 
              </div>
            </div>
          </div>
        </div>
      </section>
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="svelte-3fn7cm"
        >
          <div
            class="data-table svelte-2e8um5"
          >
            <div
              class="data-table-slot 
    scrollable svelte-2e8um5"
            >
              <div
                class="data-table-head svelte-1nivie3"
              >
                <div
                  class="data-table-row svelte-hige1l"
                >
                  <div
                    class="data-table-cell svelte-1x8v3rk"
                    style="
  max-width:100%;
  justify-content:start;
  color:#999;"
                  >
                    Search term
                     
                  </div>
                  <div
                    class="data-table-cell svelte-1x8v3rk"
                    style="
  max-width:25%;
  justify-content:flex-end;
  color:#999;"
                  >
                    Count
                     
                  </div>
                  
                </div>
              </div>
               
              <div
                class="data-table-body"
              >
                <div
                  class="data-table-expandable-row  svelte-ro6k9j"
                >
                  <div
                    class="row-content svelte-ro6k9j"
                    data-testid="row-content"
                  >
                    <div
                      class="data-table-cell svelte-1x8v3rk"
                      style="
  max-width:100%;
  justify-content:start;
  color:#333;"
                    >
                      <span
                        class="query-index svelte-1ylxfod"
                      >
                        1
                      </span>
                       
                      <div
                        class="svelte-t93ore"
                      >
                        <div
                          class=" svelte-zpbvvv"
                          style="--icon-width: 24px; --icon-height: 24px;"
                        >
                          <object
                            src="ic-expandable.svg/"
                          />
                        </div>
                      </div>
                       
                      <div
                        class="query-label svelte-1ylxfod"
                      >
                        q0
                      </div>
                    </div>
                     
                    <div
                      class="data-table-cell svelte-1x8v3rk"
                      style="
  max-width:25%;
  justify-content:flex-end;
  color:#333;"
                    >
                      2
                       
                      <span
                        class="filtered-count svelte-3fn7cm"
                      >
                        of which 
                        3
                         faceted
                      </span>
                    </div>
                     
                     
                  </div>
                   
                  <div
                    class="expandable-content svelte-ro6k9j"
                  />
                </div>
                
              </div>
            </div>
          </div>
           
          
        </div>
      </section>
    </article>
  </section>
</div>
`;

exports[`SearchesWithNoResults should render the TopSearches component with no data 1`] = `
<div>
  <section
    class="searches-with-no-results svelte-9lcmy8"
  >
    <article
      class="svelte-pntwh0"
    >
       
      <section
        class="svelte-1kld2ef"
      >
        <div
          class="title svelte-1kld2ef"
        >
          <h2
            class="svelte-1kld2ef"
          >
            No results
          </h2>
           
          <div
            slot="help"
          >
            <div
              aria-expanded="false"
              class="svelte-usl6ua"
              data-testid="info-tip"
            >
              <div
                class=" svelte-zpbvvv"
                style="--icon-width: 24px; --icon-height: 24px;"
              >
                <object
                  src="ic-asset-info.svg/"
                />
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="actions svelte-1kld2ef"
        >
          <div
            slot="actions"
          >
            <button
              class="download-csv-button svelte-wktmji"
              data-testid="download-csv-button"
              title="Download CSV (max 1000)"
            >
               
              <div
                class=" svelte-zpbvvv"
                style="--icon-width: 24px; --icon-height: 24px;"
              >
                <object
                  src="ic-download.svg/"
                />
              </div>
            </button>
             
            <div
              class="select searches-with-no-results-sizes-select svelte-c7jdhd"
            >
              <span>
                Show
              </span>
               
              <div
                class="
    mdc-select
    smui-select
    
    
    smui-select--standard
    
    
  "
              >
                 
                <i
                  class="mdc-select__dropdown-icon"
                />
                 
                <input
                  id="SMUI-select-0"
                  type="hidden"
                  value="5"
                />
                 
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="SMUI-select-0-smui-label SMUI-select-0-smui-selected-text"
                  aria-required="false"
                  class="mdc-select__selected-text"
                  id="SMUI-select-0-smui-selected-text"
                  role="button"
                  tabindex="0"
                >
                  5
                </div>
                 
                 
                 
                <div
                  class="
    mdc-line-ripple
    
    
  "
                />
                
                 
              </div>
            </div>
          </div>
        </div>
      </section>
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="svelte-3fn7cm"
        >
          <div
            class="no-data-container svelte-1kq81j9"
          >
            <p>
              No data for the selected date range
            </p>
          </div>
          
        </div>
      </section>
    </article>
  </section>
</div>
`;
